--- a/TP03MainProj/Views/Education/DiverseCultures.cshtml
+++ b/TP03MainProj/Views/Education/DiverseCultures.cshtml
@@ -89,10 +89,9 @@
                     <div class="row gx-5 align-items-center" style="background-size: cover; background-repeat: no-repeat;">
                         <h1>China data</h1>
 
-                        <div id="chartContainer" style="height: 400px; width: 100%;"></div>
 
 
-                        <div id="china-chart" style="height: 300px; width: 100%;"></div>
+                        <div id="china-chart" style="height: 400px; width: 100%;"></div>
 
                     </div>
                 </div>
@@ -112,7 +111,7 @@
 
                     <div class="row gx-5 align-items-center" style="background-size: cover; background-repeat: no-repeat;">
                         <h1>Japan data</h1>
-                        <div id="japan-chart" style="height: 300px; width: 100%;"></div>
+                        <div id="japan-chart" style="height: 400px; width: 100%;"></div>
 
                     </div>
                 </div>
@@ -133,7 +132,7 @@
 
                     <div class="row gx-5 align-items-center" style="background-size: cover; background-repeat: no-repeat;">
                         <h1>Korea data</h1>
-                        <div id="korea-chart" style="height: 300px; width: 100%;"></div>
+                        <div id="korea-chart" style="height: 400px; width: 100%;"></div>
 
                     </div>
                 </div>
@@ -155,7 +154,7 @@
 
                     <div class="row gx-5 align-items-center" style="background-size: cover; background-repeat: no-repeat;">
                         <h1>Philipines data</h1>
-                        <div id="philipines-chart" style="height: 300px; width: 100%;"></div>
+                        <div id="philipines-chart" style="height: 400px; width: 100%;"></div>
 
                     </div>
                 </div>
@@ -177,7 +176,7 @@
 
                     <div class="row gx-5 align-items-center" style="background-size: cover; background-repeat: no-repeat;">
                         <h1>Vietnam data</h1>
-                        <div id="vietnam-chart" style="height: 300px; width: 100%;"></div>
+                        <div id="vietnam-chart" style="height: 400px; width: 100%;"></div>
 
                     </div>
                 </div>
@@ -188,7 +187,6 @@
 
     </div>
 </section>
-
 
 
 
@@ -237,20 +235,464 @@
                     navigateToSection($('.toggle-link').first().attr('href'));
             }
 
-    var chinaData = @Html.Raw(Json.Encode(ViewBag.ChinaData));
-    var chart = new CanvasJS.Chart("china-chart", {
-        title: {
-            text: "China Chart"
-        },
-        data: [{
-            type: "column",
-            dataPoints: chinaData.map(function(data) {
-                var sum = Object.values(data.AgeGroups).reduce((a, b) => a + b, 0);
-                return { label: data.CensusId.toString(), y: sum };
-            })
-        }]
-    });
-    chart.render();
+            const populationData = [
+                {
+                    "CensusId": 9,
+                    "CensusYear": 1921,
+                    "CountryName": "China",
+                    "0-4": 8,
+                    "5-9": 19,
+                    "10-14": 20,
+                    "15-19": 25,
+                    "20-24": 26,
+                    "25-29": 32,
+                    "30-34": 45,
+                    "35-39": 186,
+                    "40-44": 478,
+                    "45-49": 511,
+                    "50-54": 571,
+                    "55-59": 362,
+                    "60-64": 229,
+                    "65-69": 107,
+                    "70-74": 57,
+                    "75-79": 40,
+                    "80-84": 34,
+                    "85-89": 33,
+                    "90-94": 6,
+                    "95-99": 2,
+                    "100-104": 0,
+                    "105-109": 0,
+                    "110-114": 0
+                },
+                {
+                    "CensusId": 10,
+                    "CensusYear": 1933,
+                    "CountryName": "China",
+                    "0-4": 1,
+                    "5-9": 21,
+                    "10-14": 24,
+                    "15-19": 42,
+                    "20-24": 85,
+                    "25-29": 66,
+                    "30-34": 36,
+                    "35-39": 40,
+                    "40-44": 47,
+                    "45-49": 105,
+                    "50-54": 329,
+                    "55-59": 382,
+                    "60-64": 345,
+                    "65-69": 212,
+                    "70-74": 73,
+                    "75-79": 30,
+                    "80-84": 8,
+                    "85-89": 3,
+                    "90-94": 1,
+                    "95-99": 0,
+                    "100-104": 0,
+                    "105-109": 0,
+                    "110-114": 0
+                },
+                {
+                    "CensusId": 11,
+                    "CensusYear": 1947,
+                    "CountryName": "China",
+                    "0-4": 15,
+                    "5-9": 39,
+                    "10-14": 44,
+                    "15-19": 47,
+                    "20-24": 84,
+                    "25-29": 113,
+                    "30-34": 109,
+                    "35-39": 111,
+                    "40-44": 87,
+                    "45-49": 58,
+                    "50-54": 29,
+                    "55-59": 43,
+                    "60-64": 115,
+                    "65-69": 237,
+                    "70-74": 197,
+                    "75-79": 101,
+                    "80-84": 34,
+                    "85-89": 10,
+                    "90-94": 0,
+                    "95-99": 0,
+                    "100-104": 0,
+                    "105-109": 0,
+                    "110-114": 0
+                },
+                {
+                    "CensusId": 12,
+                    "CensusYear": 1954,
+                    "CountryName": "China",
+                    "0-4": 8,
+                    "5-9": 80,
+                    "10-14": 105,
+                    "15-19": 171,
+                    "20-24": 180,
+                    "25-29": 220,
+                    "30-34": 210,
+                    "35-39": 195,
+                    "40-44": 235,
+                    "45-49": 145,
+                    "50-54": 131,
+                    "55-59": 61,
+                    "60-64": 56,
+                    "65-69": 55,
+                    "70-74": 164,
+                    "75-79": 141,
+                    "80-84": 52,
+                    "85-89": 7,
+                    "90-94": 2,
+                    "95-99": 0,
+                    "100-104": 0,
+                    "105-109": 0,
+                    "110-114": 0
+                },
+                {
+                    "CensusId": 13,
+                    "CensusYear": 1961,
+                    "CountryName": "China",
+                    "0-4": 30,
+                    "5-9": 62,
+                    "10-14": 178,
+                    "15-19": 281,
+                    "20-24": 450,
+                    "25-29": 345,
+                    "30-34": 237,
+                    "35-39": 282,
+                    "40-44": 230,
+                    "45-49": 222,
+                    "50-54": 188,
+                    "55-59": 102,
+                    "60-64": 54,
+                    "65-69": 34,
+                    "70-74": 36,
+                    "75-79": 54,
+                    "80-84": 60,
+                    "85-89": 17,
+                    "90-94": 2,
+                    "95-99": 0,
+                    "100-104": 0,
+                    "105-109": 0,
+                    "110-114": 0
+                },
+                {
+                    "CensusId": 15,
+                    "CensusYear": 1971,
+                    "CountryName": "China",
+                    "0-4": 8,
+                    "5-9": 65,
+                    "10-14": 181,
+                    "15-19": 245,
+                    "20-24": 526,
+                    "25-29": 461,
+                    "30-34": 426,
+                    "35-39": 336,
+                    "40-44": 328,
+                    "45-49": 329,
+                    "50-54": 265,
+                    "55-59": 235,
+                    "60-64": 172,
+                    "65-69": 106,
+                    "70-74": 47,
+                    "75-79": 36,
+                    "80-84": 22,
+                    "85-89": 16,
+                    "90-94": 8,
+                    "95-99": 0,
+                    "100-104": 0,
+                    "105-109": 0,
+                    "110-114": 0
+                },
+                {
+                    "CensusId": 16,
+                    "CensusYear": 1976,
+                    "CountryName": "China",
+                    "0-4": 14,
+                    "5-9": 24,
+                    "10-14": 75,
+                    "15-19": 159,
+                    "20-24": 324,
+                    "25-29": 590,
+                    "30-34": 544,
+                    "35-39": 473,
+                    "40-44": 351,
+                    "45-49": 350,
+                    "50-54": 353,
+                    "55-59": 249,
+                    "60-64": 256,
+                    "65-69": 206,
+                    "70-74": 117,
+                    "75-79": 44,
+                    "80-84": 17,
+                    "85-89": 6,
+                    "90-94": 6,
+                    "95-99": 5,
+                    "100-104": 0,
+                    "105-109": 0,
+                    "110-114": 0
+                },
+                {
+                    "CensusId": 17,
+                    "CensusYear": 1981,
+                    "CountryName": "China",
+                    "0-4": 18,
+                    "5-9": 43,
+                    "10-14": 69,
+                    "15-19": 121,
+                    "20-24": 231,
+                    "25-29": 374,
+                    "30-34": 722,
+                    "35-39": 625,
+                    "40-44": 621,
+                    "45-49": 520,
+                    "50-54": 494,
+                    "55-59": 489,
+                    "60-64": 431,
+                    "65-69": 322,
+                    "70-74": 237,
+                    "75-79": 117,
+                    "80-84": 58,
+                    "85-89": 17,
+                    "90-94": 10,
+                    "95-99": 0,
+                    "100-104": 0,
+                    "105-109": 0,
+                    "110-114": 0
+                },
+                {
+                    "CensusId": 18,
+                    "CensusYear": 1986,
+                    "CountryName": "China",
+                    "0-4": 57,
+                    "5-9": 125,
+                    "10-14": 222,
+                    "15-19": 243,
+                    "20-24": 323,
+                    "25-29": 486,
+                    "30-34": 692,
+                    "35-39": 1131,
+                    "40-44": 890,
+                    "45-49": 782,
+                    "50-54": 643,
+                    "55-59": 660,
+                    "60-64": 715,
+                    "65-69": 596,
+                    "70-74": 495,
+                    "75-79": 313,
+                    "80-84": 134,
+                    "85-89": 74,
+                    "90-94": 10,
+                    "95-99": 3,
+                    "100-104": 0,
+                    "105-109": 0,
+                    "110-114": 0
+                },
+                {
+                    "CensusId": 19,
+                    "CensusYear": 1991,
+                    "CountryName": "China",
+                    "0-4": 111,
+                    "5-9": 286,
+                    "10-14": 320,
+                    "15-19": 437,
+                    "20-24": 1388,
+                    "25-29": 3360,
+                    "30-34": 3142,
+                    "35-39": 2382,
+                    "40-44": 1865,
+                    "45-49": 1209,
+                    "50-54": 984,
+                    "55-59": 953,
+                    "60-64": 1050,
+                    "65-69": 956,
+                    "70-74": 793,
+                    "75-79": 522,
+                    "80-84": 287,
+                    "85-89": 111,
+                    "90-94": 43,
+                    "95-99": 10,
+                    "100-104": 0,
+                    "105-109": 0,
+                    "110-114": 0
+                },
+                {
+                    "CensusId": 20,
+                    "CensusYear": 1996,
+                    "CountryName": "China",
+                    "0-4": 108,
+                    "5-9": 834,
+                    "10-14": 1353,
+                    "15-19": 761,
+                    "20-24": 914,
+                    "25-29": 2021,
+                    "30-34": 4550,
+                    "35-39": 4140,
+                    "40-44": 3170,
+                    "45-49": 2175,
+                    "50-54": 1321,
+                    "55-59": 1279,
+                    "60-64": 1509,
+                    "65-69": 1383,
+                    "70-74": 1093,
+                    "75-79": 733,
+                    "80-84": 444,
+                    "85-89": 215,
+                    "90-94": 72,
+                    "95-99": 26,
+                    "100-104": 0,
+                    "105-109": 0,
+                    "110-114": 0
+                },
+                {
+                    "CensusId": 21,
+                    "CensusYear": 2001,
+                    "CountryName": "China",
+                    "0-4": 212,
+                    "5-9": 331,
+                    "10-14": 1550,
+                    "15-19": 3234,
+                    "20-24": 1867,
+                    "25-29": 1781,
+                    "30-34": 3234,
+                    "35-39": 5574,
+                    "40-44": 4804,
+                    "45-49": 3583,
+                    "50-54": 2253,
+                    "55-59": 1460,
+                    "60-64": 1587,
+                    "65-69": 1844,
+                    "70-74": 1453,
+                    "75-79": 970,
+                    "80-84": 637,
+                    "85-89": 273,
+                    "90-94": 113,
+                    "95-99": 25,
+                    "100-104": 5,
+                    "105-109": 0,
+                    "110-114": 0
+                },
+                {
+                    "CensusId": 22,
+                    "CensusYear": 2006,
+                    "CountryName": "China",
+                    "0-4": 326,
+                    "5-9": 672,
+                    "10-14": 910,
+                    "15-19": 4624,
+                    "20-24": 10495,
+                    "25-29": 5160,
+                    "30-34": 3780,
+                    "35-39": 4678,
+                    "40-44": 6728,
+                    "45-49": 5245,
+                    "50-54": 3646,
+                    "55-59": 2379,
+                    "60-64": 1583,
+                    "65-69": 1795,
+                    "70-74": 1846,
+                    "75-79": 1274,
+                    "80-84": 780,
+                    "85-89": 424,
+                    "90-94": 167,
+                    "95-99": 42,
+                    "100-104": 6,
+                    "105-109": 0,
+                    "110-114": 0
+                },
+                {
+                    "CensusId": 24,
+                    "CensusYear": 2011,
+                    "CountryName": "China",
+                    "0-4": 548,
+                    "5-9": 1270,
+                    "10-14": 2002,
+                    "15-19": 5144,
+                    "20-24": 18800,
+                    "25-29": 14778,
+                    "30-34": 7752,
+                    "35-39": 6238,
+                    "40-44": 7278,
+                    "45-49": 8418,
+                    "50-54": 6152,
+                    "55-59": 4541,
+                    "60-64": 2949,
+                    "65-69": 1994,
+                    "70-74": 2072,
+                    "75-79": 1861,
+                    "80-84": 1151,
+                    "85-89": 609,
+                    "90-94": 260,
+                    "95-99": 56,
+                    "100-104": 22,
+                    "105-109": 0,
+                    "110-114": 0
+                },
+                {
+                    "CensusId": 25,
+                    "CensusYear": 2016,
+                    "CountryName": "China",
+                    "0-4": 1302,
+                    "5-9": 2617,
+                    "10-14": 3517,
+                    "15-19": 12834,
+                    "20-24": 27835,
+                    "25-29": 24909,
+                    "30-34": 19341,
+                    "35-39": 11101,
+                    "40-44": 9634,
+                    "45-49": 9969,
+                    "50-54": 10373,
+                    "55-59": 8093,
+                    "60-64": 6972,
+                    "65-69": 4221,
+                    "70-74": 2472,
+                    "75-79": 2233,
+                    "80-84": 1781,
+                    "85-89": 937,
+                    "90-94": 394,
+                    "95-99": 105,
+                    "100-104": 23,
+                    "105-109": 0,
+                    "110-114": 0
+                }
+                // Add other data objects here...
+            ];
+
+            function renderChart(countryData, chartContainerId) {
+                var dataPoints = countryData.map(function (entry) {
+                    return { label: entry.CensusYear.toString(), y: entry["0-4"] };
+                });
+
+                // Create chart
+                var chart = new CanvasJS.Chart(chartContainerId, {
+                    animationEnabled: true,
+                    title: {
+                        text: "Population Data"
+                    },
+                    axisX: {
+                        title: "Year"
+                    },
+                    axisY: {
+                        title: "Population (Age 0-4)"
+                    },
+                    data: [{
+                        type: "column",
+                        dataPoints: dataPoints
+                    }]
+                });
+
+                // Render chart
+                chart.render();
+            }
+
+            renderChart(populationData, "china-chart");
+            renderChart(populationData, "japan-chart");
+            renderChart(populationData, "korea-chart");
+            renderChart(populationData, "philipines-chart");
+            renderChart(populationData, "vietnam-chart");
+
+
             });
     </script>
 
